public/app/grid.css
.the-map {
  transform-origin: top left;
  display: inline-block;
  cursor: crosshair;
  position: relative;
}

.the-map * {
  box-sizing: border-box;
}

.layer {
  position: absolute;
  width: 100%;
  height: 100%;
  border-left: 1px solid;
  border-top: 1px solid;
  border-color: rgba(0, 0, 0, 0);
  background-clip: padding-box;
}

.row-container {
  display: block;
  white-space: nowrap;
}

.primary-cell {
  width: 25px;
  height: 25px;
}

.corner-cell {
  width: 7px;
  height: 7px;
}

.vertical-cell {
  width: 7px;
  height: 25px;
}

.horizontal-cell {
  width: 25px;
  height: 7px;
}

.grid-cell {
  position: relative;
  display: inline-block;
  border-right: 1px solid rgba(0, 0, 0, 0);
  border-bottom: 1px solid rgba(0, 0, 0, 0);
}

.selected-cell {
  background: rgba(80, 80, 80, 0.15) content-box;
}

.separator-cell {
  position: absolute;
}

.image-cell {
  position: absolute;
}

.shape-cell {
  position: absolute;
}

.stairs-cell {
  position: absolute;
  margin: 0 1px 1px 0;
}

.text-cell {
  position: absolute;
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  text-align: center;
  margin: 2px 3px 3px 2px;
  white-space: pre-wrap;
}

.text-cell-adding, .text-cell-removing, .text-cell-editing,
.image-cell-adding, .image-cell-removing, .image-cell-editing {
  border: 1px dashed rgb(50, 50, 50);
  margin: 1px 2px 2px 1px;
}

.stairs-cell-adding, .stairs-cell-removing, .stairs-cell-editing {
  border: 1px dashed rgb(50, 50, 50);
  margin: -1px 0 0 -1px;
}

.image-cell-removing {
  border-color: red;
}

.square-cell-primary, .square-cell-vertical, .square-cell-horizontal,
.circle-cell-primary, .circle-cell-vertical, .circle-cell-horizontal {
  margin: -1px -0px -0px -1px;
}

.square-cell-primary, .circle-cell-primary {
  z-index: 1;
}

.square-cell-vertical, .square-cell-horizontal, .circle-cell-vertical,
.circle-cell-horizontal {
  z-index: 0;
}

.square-cell-corner, .circle-cell-corner {
  margin: -7px -6px -6px -7px;
  z-index: 2;
  background: rgb(255, 0, 0) !important;
}

.square-cell-corner-removing, .circle-cell-corner-removing {
  z-index: -1;
}

.square-cell-primary-removing, .square-cell-horizontal-removing,
.square-cell-vertical-removing, .circle-cell-primary-removing,
.circle-cell-horizontal-removing, .circle-cell-vertical-removing {
  z-index: -2;
}

.square-cell-0 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 20 6, 20 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-1 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-2 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 27 6, 27 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-3 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 6, 27 6, 27 20, 6 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-4 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 20 6, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-5, .circle-cell-5 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-6 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 6, 27 6, 27 20, 20 20, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-7 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 6, 27 6, 27 20, 20 20, 20 27, 6 27' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-8 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 20 6, 20 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-9 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 6 6, 6 -2, 20 -2, 20 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-10, .circle-cell-10 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 27 6, 27 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-11 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 6, 27 6, 27 20, -2 20, -2 6, 6 6' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-12 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 20 6, 20 27, 6 27, 6 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-13 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='6 -2, 20 -2, 20 27, 6 27, 6 20, -2 20, -2 6, 6 6' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-14 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 27 6, 27 20, 20 20, 20 27, 6 27, 6 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.square-cell-15 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><polygon points='-2 6, 6 6, 6 -2, 20 -2, 20 6, 27 6, 27 20, 20 20, 20 27, 6 27, 6 20, -2 20' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-0 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><circle cx='13' cy='13' r='7' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-1 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 6 -2, H 20, V 13, A 7 7 0 1 1 6 13, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-2 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 30 6, V 20, H 13, A 7 7 0 1 1 13 6, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-3 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 6 -2, H 20, V 0, A 6 6 0 0 0 26 6, H 27, V 20, H 26, A 20 20 0 0 1 6 0, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-4 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 6 27, H 20, V 13, A 7 7 0 0 0 6 13, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-6 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 27 6, V 20, H 26, A 6 6 0 0 0 20 26, V 27, H 6, V 26, A 20 20 0 0 1 26 6, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-7 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 20 -2, V 0, A 6 6 0 0 0 26 6, H 27, V 20, H 26, A 6 6 0 0 0 20 26, V 27, H 6, V -2, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-8 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M -2 20, V 6, H 13, A 7 7 0 1 1 13 20, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-9 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 6 -2, H 20, V 0, A 20 20 0 0 1 0 20, H -2, V 6, H 0, A 6 6 0 0 0 6 0, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-11 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M -2 6, H 0, A 6 6 0 0 0 6 0, V -2, H 20, V 0, A 6 6 0 0 0 26 6, H 27, V 20, H -2, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-12 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M -2 6, H 0, A 20 20 0 0 1 20 26, V 27, H 6, A 6 6 0 0 0 0 20, H -2, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-13 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M 6 -2, H 20, V 27, H 6, V 26, A 6 6 0 0 0 0 20, H -2, V 6, H 0, A 6 6 0 0 0 6 0, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-14 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M -2 6, H 27, V 20, H 26, A 6 6 0 0 0 20 26, V 27, H 6, V 26, A 6 6 0 0 0 0 20, H -2, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.circle-cell-15 {
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'><path d='M -2 6, H 0, A 6 6 0 0 0 6 0, V -2, H 20, V 0, A 6 6 0 0 0 26 6, H 27, V 20, A 6 6 0 0 0 20 26, V 27, H 6, V 26, A 6 6 0 0 0 0 20, H -2, z' fill='rgb(255, 0, 0)' stroke-width='1.5' stroke='rgb(150, 0, 0)'/></svg>");
}

.angled-wall-cell {
  margin: -7px;
}

